--- a/emojicrush.css
+++ b/emojicrush.css
@@ -4,17 +4,20 @@ html {
   user-select: none;
   -webkit-user-select: none;
   -webkit-touch-callout: none;
+  height: 100%;
 }
 
 body {
   margin: 0;
   background-color: #333;
+  height: 100%;
 }
 
 #game {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 #boardArea {
@@ -30,6 +33,7 @@ body {
 }
 
 .square {
+  box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.8);
   width: 16vmin;
   height: 16vmin;
