--- a/emojicrush.css
+++ b/emojicrush.css
@@ -67,6 +67,7 @@ body {
 .emoji {
   position: absolute;
   transform: translate(-50%, -50%);
-  transition: 0.25s ease-in;
+  transition: top 0.25s ease-in-out, left 0.25s ease-in-out,
+    opacity 0.25s linear;
   font-size: var(--emoji-size);
 }
